name:                rm-chat
version:             0.1.0.0
-- synopsis:            Initial project template from stack
-- description:         Please see README.md
homepage:            http://github.com/mitchellwrosen/rm-chat#readme
license:             BSD3
license-file:        LICENSE
author:              Mitchell Rosen
maintainer:          mitchellwrosen@gmail.com
copyright:           2015 Mitchell Rosen
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , regex-applicative
  default-language:    Haskell2010

executable rm-chat-server
  hs-source-dirs:      app
  main-is:             Server.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , rm-chat
                     , zeromq4-haskell
  default-language:    Haskell2010

executable rm-chat-client
  hs-source-dirs:      app
  main-is:             Client.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , rm-chat
                     , transformers
                     , zeromq4-haskell
  default-language:    Haskell2010

test-suite rm-chat-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , rm-chat
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mitchellwrosen/rm-chat
